Fix animation of stroke-width with non-100% zoom level

Most of the animations code knows to apply zoom properly for
stroke-width (which is zoom agnostic), but
CSSLengthInterpolationType::ApplyStandardPropertyValue was passing the
default CSSToLengthConversionData without setting the effective zoom
level. This CL fixes that.

Bug: 894412
Change-Id: Ieaf57a794cc1f94b017730b5918e410a86a3fa5f
Reviewed-on: https://chromium-review.googlesource.com/c/1297748
Reviewed-by: Yi Gu <yigu@chromium.org>
Commit-Queue: Stephen McGruer <smcgruer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#602873}
Former-commit-id: a14d455b3690e2370f1e7d08ace0a248052276ef