third_party/blink/renderer/core/animation/css_length_interpolation_type.cc
@@ -154,9 +154,11 @@ void CSSLengthInterpolationType::ApplyStandardPropertyValue(
     StyleResolverState& state) const {
   ComputedStyle& style = *state.Style();
   float zoom = EffectiveZoom(style);
+  CSSToLengthConversionData conversion_data = state.CssToLengthConversionData();
+  conversion_data.SetZoom(zoom);
   Length length = LengthInterpolationFunctions::CreateLength(
-      interpolable_value, non_interpolable_value,
-      state.CssToLengthConversionData(), value_range_);
+      interpolable_value, non_interpolable_value, conversion_data,
+      value_range_);
   if (LengthPropertyFunctions::SetLength(CssProperty(), style, length)) {
 #if DCHECK_IS_ON()
     // Assert that setting the length on ComputedStyle directly is identical to
